--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
       <div class="form-leave">
         <button class="circle-for-cross" type="button">
           <svg class="cross" width="8" height="8">
-            <use href="./images/icons.svg#icon-cross" />
+            <use href="./images/icons.svg#icon-icon-cross" />
           </svg>
         </button>
         <p class="leave-legend text-label">
@@ -499,7 +499,7 @@
                 name="user-name"
                 id="user-name" />
               <svg class="icons-input-for" width="18" height="24">
-                <use href="./images/icons.svg#icon-person" />
+                <use href="./images/icons.svg#icon-icon-person" />
               </svg>
             </div>
           </div>
@@ -512,7 +512,7 @@
                 name="user-tel"
                 id="user-tel" />
               <svg class="icons-input-for" width="18" height="24">
-                <use href="./images/icons.svg#icon-phone" />
+                <use href="./images/icons.svg#icon-icon-phone" />
               </svg>
             </div>
           </div>
@@ -525,7 +525,7 @@
                 name="user-email"
                 id="user-email" />
               <svg class="icons-input-for" width="18" height="24">
-                <use href="./images/icons.svg#icon-mail" />
+                <use href="./images/icons.svg#icon-icon-mail" />
               </svg>
             </div>
           </div>
@@ -547,7 +547,7 @@
             <label for="user-privacy" class="form-text-privacy"
               ><span class="like-check">
                 <svg class="yes-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-yes" />
+                  <use href="./images/icons.svg#icon-checkmark" />
                 </svg> </span
               >I accept the terms and conditions of the
               <a href="#" class="form-link-privacy">Privacy Policy</a></label
