--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <ul class="team-list">
             <li class="worker">
               <img
-                src="./images/hu1.jpg"
+                src="./images/PD.jpg"
                 alt="Solid man with beard"
                 width="264" />
               <div class="worker-text">
@@ -174,7 +174,7 @@
               </div>
             </li>
             <li class="worker">
-              <img src="./images/hu2.jpg" alt="Happy man" width="264" />
+              <img src="./images/FD.jpg" alt="Happy man" width="264" />
               <div class="worker-text">
                 <h3 class="human-worker">Tom Ford</h3>
                 <p class="profesional">Frontend Developer</p>
@@ -212,7 +212,7 @@
             </li>
             <li class="worker">
               <img
-                src="./images/hu3.jpg"
+                src="./images/marketing.jpg"
                 alt="Woman in pink clothes"
                 width="264" />
               <div class="worker-text">
@@ -251,7 +251,7 @@
               </div>
             </li>
             <li class="worker">
-              <img src="./images/hu4.jpg" alt="Man look at us" width="264" />
+              <img src="./images/UID.jpg" alt="Man look at us" width="264" />
               <div class="worker-text">
                 <h3 class="human-worker">Daniel Wilson</h3>
                 <p class="profesional">UI Designer</p>
@@ -297,7 +297,10 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="box-for-overlay">
-                <img src="./images/img1.jpg" alt="Purple squads" width="360" />
+                <img
+                  src="./images/madita.jpg"
+                  alt="Purple squads"
+                  width="360" />
                 <p class="paragraf-for-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -312,7 +315,7 @@
             <li class="portfolio-item">
               <div class="box-for-overlay">
                 <img
-                  src="./images/img2.jpg"
+                  src="./images/cash.jpg"
                   alt="Qr-code in a phone"
                   width="360" />
                 <p class="paragraf-for-overlay">
@@ -329,7 +332,7 @@
             <li class="portfolio-item">
               <div class="box-for-overlay">
                 <img
-                  src="./images/img3.jpg"
+                  src="./images/app.jpg"
                   alt="Laptop and smartphone"
                   width="360" />
                 <p class="paragraf-for-overlay">
@@ -346,7 +349,7 @@
             <li class="portfolio-item">
               <div class="box-for-overlay">
                 <img
-                  src="./images/img4.jpg"
+                  src="./images/taxi.jpg"
                   alt="Steering wheel in car"
                   width="360" />
                 <p class="paragraf-for-overlay">
@@ -363,7 +366,7 @@
             <li class="portfolio-item">
               <div class="box-for-overlay">
                 <img
-                  src="./images/img5.jpg"
+                  src="./images/screen.jpg"
                   alt="Phone and backgrounds"
                   width="360" />
                 <p class="paragraf-for-overlay">
@@ -380,7 +383,7 @@
             <li class="portfolio-item">
               <div class="box-for-overlay">
                 <img
-                  src="./images/img6.jpg"
+                  src="./images/online.jpg"
                   alt="Happy woman check her phone"
                   width="360" />
                 <p class="paragraf-for-overlay">
@@ -470,7 +473,7 @@
             <button type="submit" class="footer-but">
               Subscribe
               <svg class="button-icon-plane" width="24" height="24">
-                <use href="./images/icons.svg#icon-plane" />
+                <use href="./images/icons.svg#icon-Frame" />
               </svg>
             </button>
           </form>
@@ -483,7 +486,7 @@
       <div class="form-leave">
         <button class="circle-for-cross" type="button">
           <svg class="cross" width="8" height="8">
-            <use href="./images/icons.svg#icon-icon-cross" />
+            <use href="./images/icons.svg#icon-cross" />
           </svg>
         </button>
         <p class="leave-legend text-label">
@@ -499,7 +502,7 @@
                 name="user-name"
                 id="user-name" />
               <svg class="icons-input-for" width="18" height="24">
-                <use href="./images/icons.svg#icon-icon-person" />
+                <use href="./images/icons.svg#icon-person" />
               </svg>
             </div>
           </div>
@@ -512,7 +515,7 @@
                 name="user-tel"
                 id="user-tel" />
               <svg class="icons-input-for" width="18" height="24">
-                <use href="./images/icons.svg#icon-icon-phone" />
+                <use href="./images/icons.svg#icon-phone" />
               </svg>
             </div>
           </div>
@@ -525,7 +528,7 @@
                 name="user-email"
                 id="user-email" />
               <svg class="icons-input-for" width="18" height="24">
-                <use href="./images/icons.svg#icon-icon-mail" />
+                <use href="./images/icons.svg#icon-mail" />
               </svg>
             </div>
           </div>
@@ -547,7 +550,7 @@
             <label for="user-privacy" class="form-text-privacy"
               ><span class="like-check">
                 <svg class="yes-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-checkmark" />
+                  <use href="./images/icons.svg#icon-yes" />
                 </svg> </span
               >I accept the terms and conditions of the
               <a href="#" class="form-link-privacy">Privacy Policy</a></label
